AX: AXIsolatedObject::m_propertyMap is not sparse https://bugs.webkit.org/show_bug.cgi?id=261968 rdar://115907545

Reviewed by Andres Gonzalez.

This patch makes the AXIsolatedObject::m_propertyMap, where AXIsolatedObject properties are cached,
sparse. This is accomplished through conditionally adding properties to the map, based on whether
their values are the default for their given type. If a value is the default, we don't add it to
the map (or if it changes to be the default, we remove it). Our existing logic handles these cases
by returning the type's default value when it does not exist in the property map.

The initial size allocation for the propertyMap was brought down to 22 from 92 after running
this change on several sites and finding the minimum number of properties stored.

With this patch applied, on average it reduces the memory footprint of the web process (with AX
enabled) by ~33%. This analysis was performed using VoiceOver on an academic journal page.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::AXIsolatedObject):
(WebCore::AXIsolatedObject::setProperty):
(WebCore::AXIsolatedObject::indexRangePairAttributeValue const):
(WebCore::AXIsolatedObject::pairAttributeValue const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:

Canonical link: https://commits.webkit.org/268449@main